# Web_Crawler_Scrapy

./: .gitignore  README.md  pyproject.toml
web_crawler_scrapy/crawling/: output.json
web_crawler_scrapy/crawling/crawling/: middlewares.py  settings.py
web_crawler_scrapy/crawling/crawling/spiders/: crawling_spider.py
